# linal_lab1

./: .gitignore  CMakeLists.txt  LU_decomposition.cpp  LU_decomposition.h  README.md  gauss_advanced.cpp  gauss_advanced.h  gauss_default.cpp  gauss_default.h  matrix.cpp  matrix.h  tests.cpp  tests.h
